--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.Card{
+  border: 1px solid salmon;
+  display: block;
+  height: 340px;
+  padding: 10px;
+  width: 150px;
+}
+
+.card--header{
+  padding: 10px;
+  margin-botton: 5px;
+  font-size: 20px;
+}
+
+.card--body{
+  font-size: 18px;
+  color: black;
+}
+
+.card--footer{
+  color: gray;
+  text-align: center;
+}
